# romea-ros2-localisation-imu-plugin

./: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  romea_imu.rosinstall  romea_localisation_imu.repos  romea_localisation_imu_plugin.repos  visibility_control.h
include/romea_localisation_imu/: imu_localisation_plugin.hpp  imu_localisation_plugin_parameters.hpp  imu_parameters.hpp  visibility_control.h
include/romea_localisation_imu_plugin/: imu_localisation_plugin.hpp  imu_localisation_plugin_parameters.hpp  visibility_control.h
launch/: imu_plugin.launch.py
src/: imu_localisation_plugin.cpp  imu_localisation_plugin_node.cpp  imu_localisation_plugin_parameters.cpp  imu_parameters.cpp
